working on changing MySQLiConnection to SQLiteConnection

--- a/display-recipe.html
+++ b/display-recipe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="store">
+<html ng-app="recipeBook">
     <head>
         <title>Arasaia: Recipe Book</title>
         <!-- Bootstrap -->
@@ -13,7 +13,7 @@
         <!-- Angular.js -->
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
-        <script type="text/javascript" src="js/recipe-ingredients.js"></script>
+        <script type="text/javascript" src="js/recipeDisplay.js"></script>
     </head>
     <!-- <element ng-controller="ControllerName as alias"> -->
     <body>
