--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <!-- jQuery -->
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 
+    <!-- jQuery UI -->
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"> -->
