--- a/index-test.html
+++ b/index-test.html
@@ -4,68 +4,96 @@
         <meta charset="UTF-8">
         <title>Arasaia - Recipe Book</title>
     </head>
-    <body ng-controller="RecipeController as recipe">
-        <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <!-- the hamburger menu when the viewport too small -->
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <!-- creates the "hamburger" look -->
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Project name</a>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                        <!-- <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li class="divider"></li>
-                                <li class="dropdown-header">Nav header</li>
-                                <li><a href="#">Separated link</a></li>
-                                <li><a href="#">One more separated link</a></li>
-                            </ul>
-                        </li> -->
-                    </ul>
-                    <!-- buttons over on the right of the nav bar -->
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="../navbar/">Default</a></li>
-                        <li><a href="../navbar-static-top/">Static top</a></li>
-                        <li class="active"><a href="./">Fixed top</a></li>
-                    </ul>
-                </div><!--/.nav-collapse -->
-            </div>
-        </nav>
-        <ul id="controller-init">
-            <li class="RecipeController-init"></li>
-            <li class="ingredients-display-init"></li>
-        </ul>
+    <body ng-controller="RecipeBookController as recipeBook">
         <p>1 + 2 = {{ 1 + 2 }}</p>
-        <recipe-ingredients></recipe-ingredients>
-            <!--<ul class="list-unstyled">
-                <li ng-repeat="ingredient in recipe.ingredients">{{ingredient.name}}</li>
-            </ul>-->
-            <!--<ul class="list-unstyled">
-                <li ng-repeat="ingredient in recipe.ingredients">{{ingredient.amount + " " + ingredient.measure_name + " " + ingredient.name}}</li>
-            </ul>-->
+        <!--section class="tab" ng-controller="TabController as tab">
+            <ul class="nav nav-pills">
+                <li ng-class="{active: tab.isSet(1)}">
+                    <a href ng-click="tab.setTab(1)">Description</a>
+                </li>
+                <li ng-class="{active: tab.isSet(2)}">
+                    <a href ng-click="tab.setTab(2)">Specifications</a>
+                </li>
+                <li ng-class="{active: tab.isSet(3)}">
+                    <a href ng-click="tab.setTab(3)">Reviews</a>
+                </li>
+            </ul>
+            <div class="panel" ng-show="tab.isSet(1)">
+                <h4>Description</h4>
+                <p>Product description</p>
+            </div>
+            <div class="panel" ng-show="tab.isSet(2)">
+                <h4>Specifications</h4>
+                <p>Product specifications</p>
+            </div>
+            <div class="panel" ng-show="tab.isSet(3)">
+                <h4>Reviews</h4>
+                <p>Product reviews</p>
+            </div>
+        </section>-->
+        <section ng-controller="TabController as tab">
+            <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+                <div class="container">
+                    <div class="navbar-header">
+                        <!-- the hamburger menu when the viewport too small -->
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <!-- creates the "hamburger" look -->
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#">recipe-book</a>
+                        <span class="navbar-brand">recipe-book</span>
+                    </div>
+                    <div id="navbar" class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <li ng-class="{active:tab.isSet(1)}"><a href ng-click="tab.setTab(1)">menus</a></li>
+                            <li ng-class="{active:tab.isSet(2)}"><a href ng-click="tab.setTab(2)">recipes</a></li>
+                            <li ng-class="{active:tab.isSet(3)}"><a href ng-click="tab.setTab(3)">ingredients</a></li>
+                            <li ng-class="{active:tab.isSet(4)}"><a href ng-click="tab.setTab(4)">measures</a></li>
+                            <!--<li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">dropdown<span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li class="divider"></li>
+                                    <li class="dropdown-header">Nav header</li>
+                                    <li><a href="#">Separated link</a></li>
+                                    <li><a href="#">One more separated link</a></li>
+                                </ul>
+                            </li>-->
+                        </ul>
+                    </div><!--/.nav-collapse -->
+                </div>
+            </nav>
+            <div class="panel" ng-show="tab.isSet(1)">
+                This is the list of menus.
+            </div>
+            <div class="panel" ng-show="tab.isSet(2)">
+                This is the list of recipes.
+            </div>
+            <div class="panel" ng-show="tab.isSet(3)">
+                <all-ingredients></all-ingredients>
+            </div>
+            <div class="panel" ng-show="tab.isSet(4)">
+                This is the list of measures.
+            </div>
+        </section>
     </body>
 
     <!-- jQuery -->
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 
+    <!-- jQuery UI -->
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="http://arasaia.net/test/recipe/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <!-- Optional theme -->
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">-->
@@ -73,13 +101,14 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 
-
-    <!-- X-editable -->
-    <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
-
     <!-- Angular.js -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+
+    <!-- X-editable (Angular version) -->
+    <link  rel="stylesheet" href="css/xeditable.css">
+    <script type="text/javascript" src="js/xeditable.min.js"></script>
+
+    <!-- App code -->
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/ingredients.js"></script>
 </html>
