probably figured out select template; now to figure out getting different values to stick

--- a/index-test.html
+++ b/index-test.html
@@ -74,7 +74,7 @@
 
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <!-- Optional theme -->
