got values to stick and display; not sure about right-aligning editable-select elements

--- a/index-test.html
+++ b/index-test.html
@@ -93,4 +93,5 @@
     <!-- App code -->
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/ingredients.js"></script>
+    <link rel="stylesheet" href="css/recipebook.css" />
 </html>
