ignoring right-align for now; got ingredient update service going

--- a/index-test.html
+++ b/index-test.html
@@ -63,6 +63,8 @@
                 </div>
             </section>
         </div>
+    <div id="errorMessageDiv" class="alert alert-danger"></div>
+    <div id="successMessageDiv" class="alert alert-success"></div>
     </body>
 
     <!-- jQuery -->
