added type and measure editing

--- a/index-test.html
+++ b/index-test.html
@@ -55,7 +55,7 @@
                     <all-ingredients></all-ingredients>
                 </div>
                 <div class="tab" ng-show="tab.isSet(4)">
-                    This is the list of measures.
+                    <all-measures></all-measures>
                 </div>
                 <div class="tab" ng-show="tab.isSet(5)">
                     This is the list of food types.
@@ -94,6 +94,6 @@
 
     <!-- App code -->
     <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/ingredients.js"></script>
+    <script type="text/javascript" src="js/pieces.js"></script>
     <link rel="stylesheet" href="css/recipebook.css" />
 </html>
