--- a/index.html
+++ b/index.html
@@ -47,5 +47,5 @@
     <!-- Angular.js -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/ingredients.js"></script>
+    <script type="text/javascript" src="js/pieces.js"></script>
 </html>
