added menu view

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                 </nav>
                 <div class="tab" ng-show="tab.isSet(1)">
-                    This is the list of menus.
+                    <all-menus></all-menus>
                 </div>
                 <div class="tab" ng-show="tab.isSet(2)">
                     <all-recipes></all-recipes>
